--- a/404.html
+++ b/404.html
@@ -4,18 +4,22 @@
     <meta charset="utf-8">
     <title>Sistema de Conferência</title>
     <script type="text/javascript">
-      // Redireciona para a página principal do SPA
-      var segmentCount = 1;
+      // Pega todos os componentes da URL
+      var pathSegmentsToKeep = 1;
       var l = window.location;
-      l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + segmentCount).join('/') + '/?p=/' +
-        l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
-        (l.search ? '&q=' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-        l.hash
-      );
+      
+      // Reescreve a URL para usar a estratégia SPA
+      var redirectUrl = l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+        l.pathname.split('/').slice(0, pathSegmentsToKeep + 1).join('/') + '/?/' +
+        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/') +
+        (l.search ? '&' + l.search.slice(1) : '') +
+        l.hash;
+      
+      window.location.replace(redirectUrl);
     </script>
   </head>
   <body>
+    <h1>Redirecionando...</h1>
+    <p>Se você não for redirecionado automaticamente, <a href="/">clique aqui</a>.</p>
   </body>
 </html> 
