--- a/index.html
+++ b/index.html
@@ -16,10 +16,27 @@
     <meta name="twitter:site" content="@wandersondavyd" />
     <meta name="twitter:image" content="https://www.brisanet.com.br/favicon.ico" />
     <script src="https://apis.google.com/js/api.js"></script>
+    
+    <!-- Script de redirecionamento para GitHub Pages SPA -->
+    <script type="text/javascript">
+      // Redireciona as rotas para o React Router
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(
+            null, 
+            null,
+            l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
   </head>
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
